src/objects/Risk__c.object
<CustomObject>
    <fields>
        <fullName>Average_Leg_Score__c</fullName>
        <formula>( Event_Sensitivity_Score__c + Peak_Day_Score__c + Weather_Sensitivity_Score__c )/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Leg Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backup_and_Recovery_Score__c</fullName>
        <label>Backup and Recovery Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Sensitivity_Score__c</fullName>
        <inlineHelpText>1= No event sensitivity
2= Yes but outside of 3 hours (dom) or 5 hours (int) of dep/arr times
3= Yes and within 3 / 5 hours of flight times</inlineHelpText>
        <label>Event Sensitivity Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItinerarySolution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Itinerary Solution</label>
        <referenceTo>Itinerary_Solution__c</referenceTo>
        <relationshipLabel>Risk</relationshipLabel>
        <relationshipName>Risk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leg__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Leg</label>
        <referenceTo>Leg__c</referenceTo>
        <relationshipLabel>Risk</relationshipLabel>
        <relationshipName>Risk</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Business_Hours_dep_arr__c</fullName>
        <label>Non-Business Hours (dep/arr)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Potential conflict with airport operating hours exist</fullName>
                </value>
                <value>
                    <fullName>Crew duty issues may occur at these non-standard operating hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Peak_Day_Score__c</fullName>
        <inlineHelpText>1= Non Peak or High Volume Day
2= High Volume/Demand Day
3= Peak Day</inlineHelpText>
        <label>Peak Day Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trip_Manager__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Trip Manager</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Risk</relationshipLabel>
        <relationshipName>Risk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weather_Sensitivity_Score__c</fullName>
        <inlineHelpText>1= Airport is not usually impacted by weather
2= Airport is occasionally impacted by weather
3= Airport is often impacted by weather</inlineHelpText>
        <label>Weather Sensitivity Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Risk</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>